components/LegalFooter.module.css
.footer {
  font-size: .9rem;
  position: relative;
  background-color: #301261;
  background-color: rgba(0,0,0,0.5);
  padding: 0;
  z-index: 3;
}

.col {
  position: relative;
  margin: 0px;
  padding: 16px;
  color: #999;
  font-size: .8rem;
  vertical-align: bottom;
}
.alignRight {
  text-align: right;
}

.col a,
.col a:visited,
.col a:active {
  color: #999;
}

.link {
  display: block;
}

